tests/codegen-ui/fail.stderr
warning: unused import: `proc_macro::TokenStream`
  --> $DIR/lib.rs:17:5
   |
17 | use proc_macro::TokenStream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/codegen-ui/fail.rs`
